work on Zopfli
--HG--
branch : staging